Added new files

--- a/UserDetails.html
+++ b/UserDetails.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz App</title>
+    <title>User Details</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
 </head>
 <body>
-    <div class="begin">
-        <h1>QUIZ</h1>
-        <button class="start">Start Quiz</button>
+    <h2>User Details</h2>
+    <h3>Enter your details before you begin the quiz</h3>
+    <div class="details">
+        <input type="name" placeholder="Enter your name" id="name">
+        <button class="submit">Submit</button>
     </div>
-    
     <script src="app.js"></script>
 </body>
 </html>
